--- a/estilo.css
+++ b/estilo.css
@@ -1,1 +1,26 @@
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer{
+			background-color: #fcf6bd;
+			width: 100%;
+        		color: black;
+			font-size: 20px;
+			text-align: center;
+			position: absolut;
+			font-size: 16px;
+			font-weight: bold;
+		}
