--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,15 @@
-header{
+nav{
 	font-stretch: Blippo, fantasy;
-	background-image: url(fundo.png.jpeg);
+}
+
+body{
+	background-image: url(fundo.png);
 	height: 1080px;
 	position: center;
 }
 
 .links{
+	text-decoration: none;
 	color: black;
 	-webkit-text-fill-color: rgb(80, 76, 76); 
 	-webkit-text-stroke: 3px black;
@@ -13,6 +17,22 @@ header{
 	font-stretch: Jazz LET, fantasy;
 	font-weight: 900;
 	
+}
+
+.titulo{
+	color: yellow;
+
+}
+
+.subtitulo{
+	color: yellow;
+
+}
+
+main{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 
