--- a/estilo.css
+++ b/estilo.css
@@ -1,46 +1,55 @@
+@font-face{
+	font-family: Pixel;
+	src: url(./upheaval/upheavtt.ttf);
+}
 body{
-    background-image: url("fundo.png"), url("terra.png");
-    background-size: contain;
-    background-repeat: no-repeat, repeat;
-    background-position: top, bottom;
+	background-image: url("fundo.png"), url("terra.png");
+	background-size: contain;
+	background-repeat: no-repeat, repeat;
+	background-position: top, bottom;
 }
 #links{
-        color: white;
-        -webkit-text-stroke: 2px black;
+    color: white;
+    -webkit-text-stroke: 2px black;
     font-size: 38px;
-        text-decoration: none;
+	font-family: Pixel;
+    text-decoration: none;
 }
 #titulo{
-        text-align: center;
-        font-size: 50px;
-        color: #F0E68C;
-        -webkit-text-stroke: 3px black;
+    text-align: center;
+    font-size: 100px;
+    color: #F0E68C;
+	font-family: Pixel;
+    -webkit-text-stroke: 3px black;
 }
 #subtitulo{
-    margin-top: -85px;
-        text-align: center;
-        font-size: 25px;
-        color: white;
+    margin-top: -125px;
+	font-family: Pixel;
+    text-align: center;
+	font-size: 40px;
+    color: white;
     -webkit-text-stroke: 2px black;
 }
 #historia{
-        text-align: center;
-        color: white;
+    text-align: center;
+    color: white;
     -webkit-text-stroke: 2px black;
     font-size: 25px;
-    margin-top: 30px;
+    margin-top: 700px;
 }
 #personagens{
     text-align: center;
-        color: white;
+    color: white;
     -webkit-text-stroke: 2px black;
     font-size: 25px;
+	margin-top: 100px;
 }
 #comojogar{
-        color: white;
+    color: white;
     -webkit-text-stroke: 2px black;
-        text-align: center;
+    text-align: center;
     font-size: 25px;
+	margin-top: 200px;
 }
 #personagensname{
     color: #F0E68C;
@@ -52,14 +61,16 @@ body{
     color: white;
     text-align: center;
     font-size: 25px;
-    margin-top: 40px;
+    margin-top: 10px;
+	margin-left: 40px;
+	margin-right: 40px;
 }
 #paragrafo{
-    color: black;
+    color: white;
     margin-left: 700px;
     font-size: 25px;
     display: flex;
-    margin-top: -25px;
+    margin-top: -350px;
 }
 #foto1{
     display: flex;
@@ -72,6 +83,9 @@ body{
 }
 #foto4{
     display: flex;
+}
+#foto5{
+	display: flex;
 }
 footer{
         background-color: #f5e664;
